--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--Features of Twitter are the following
+Clicking on a hash tag makes a list of tweets with that hashtag  
+Clicking on a handle makes a list of tweets made by the handle
+Shows how long it has been since or when the tweet has been made
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,20 +10,38 @@
     <script src="data_generator.js"></script>
   </head>
   <body>
+  <tweet><div></div></tweet>
+  <user><div></div></user>
+  
     <script>
 
       $(document).ready(function(){
-        var $body = $('body');
+        var $body = $('tweet');
         $body.html('');
-
+        $body.prepend('<h1>Twittler</h1>');
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
+          $tweet.append(tweet.created_at.toLocaleTimeString() + ' <a class=user ' + tweet.user + '>@' + tweet.user + '</a>: ' + tweet.message);
           $tweet.appendTo($body);
           index -= 1;
         }
+
+        $('.user').on('click',function(){
+          var user = $(this).text().replace('@','');
+          var $body = $('user')
+          $body.prepend('<h1>@'+ user + '</h1>');
+          $('tweet').hide();
+          var index = streams.users[user].length - 1;
+          while(index >= 0){
+            var tweet = streams.users[user][index];
+            var $tweet = $('<div></div>');
+            $tweet.prepend(tweet.created_at.toLocaleTimeString() + ' <a class=user ' + tweet.user + '>@' + tweet.user + '</a>: ' + tweet.message);
+            $tweet.appendTo($body);
+            index -= 1;
+          }
+        })
 
       });
 
